--- a/LoopLab/index.html
+++ b/LoopLab/index.html
@@ -65,59 +65,109 @@
 						<div class="col-lg-8 d-none d-lg-block">
 							<h1 class="display-4">
 								Build <strong>social profiles</strong> and gain revenue profits
-              </h1>
-              <div class="d-flex">
-                <div class="p-4 align-self-start">
-                  <i class="fas fa-check fa-2x"></i>
-                </div>
-                <div class="p4 align-self-end">
-                  Lorem, ipsum dolor sit amet consectetur adipisicing elit. Non rem voluptate itaque, ad ullam beatae!
-                </div>
-              </div>
-              <div class="d-flex">
-                <div class="p-4 align-self-start">
-                  <i class="fas fa-check fa-2x"></i>
-                </div>
-                <div class="p4 align-self-end">
-                  Lorem, ipsum dolor sit amet consectetur adipisicing elit. Non rem voluptate itaque, ad ullam beatae!
-                </div>
-              </div>
-              <div class="d-flex">
-                <div class="p-4 align-self-start">
-                  <i class="fas fa-check fa-2x"></i>
-                </div>
-                <div class="p4 align-self-end">
-                  Lorem, ipsum dolor sit amet consectetur adipisicing elit. Non rem voluptate itaque, ad ullam beatae!
-                </div>
-              </div>
-            </div>
-            <div class="col-lg-4">
-              <div class="card bg-primary text-center card-form">
-                <div class="card-body">
-                  <h3>Sign up today</h3>
-                  <p>Please fill out this form to register</p>
-                  <form>
-                    <div class="form-group">
-                      <input type="text" class="form-control form-control-lg" placeholder="username">
-                    </div>
-                    <div class="form-group">
-                      <input type="email" class="form-control form-control-lg" placeholder="email">
-                    </div>
-                    <div class="form-group">
-                      <input type="password" class="form-control form-control-lg" placeholder="password">
-                    </div>
-                    <div class="form-group">
-                      <input type="password" class="form-control form-control-lg" placeholder="confirm password">
-                    </div>
-                    <input type="submit" value="Submit" class="btn btn-outline-light btn-block">
-                  </form>
-                </div>
-              </div>
-            </div>
+							</h1>
+							<div class="d-flex">
+								<div class="p-4 align-self-start">
+									<i class="fas fa-check fa-2x"></i>
+								</div>
+								<div class="p4 align-self-end">
+									Lorem, ipsum dolor sit amet consectetur adipisicing elit. Non
+									rem voluptate itaque, ad ullam beatae!
+								</div>
+							</div>
+							<div class="d-flex">
+								<div class="p-4 align-self-start">
+									<i class="fas fa-check fa-2x"></i>
+								</div>
+								<div class="p4 align-self-end">
+									Lorem, ipsum dolor sit amet consectetur adipisicing elit. Non
+									rem voluptate itaque, ad ullam beatae!
+								</div>
+							</div>
+							<div class="d-flex">
+								<div class="p-4 align-self-start">
+									<i class="fas fa-check fa-2x"></i>
+								</div>
+								<div class="p4 align-self-end">
+									Lorem, ipsum dolor sit amet consectetur adipisicing elit. Non
+									rem voluptate itaque, ad ullam beatae!
+								</div>
+							</div>
+						</div>
+						<div class="col-lg-4">
+							<div class="card bg-primary text-center card-form">
+								<div class="card-body">
+									<h3>Sign up today</h3>
+									<p>Please fill out this form to register</p>
+									<form>
+										<div class="form-group">
+											<input
+												type="text"
+												class="form-control form-control-lg"
+												placeholder="username"
+											/>
+										</div>
+										<div class="form-group">
+											<input
+												type="email"
+												class="form-control form-control-lg"
+												placeholder="email"
+											/>
+										</div>
+										<div class="form-group">
+											<input
+												type="password"
+												class="form-control form-control-lg"
+												placeholder="password"
+											/>
+										</div>
+										<div class="form-group">
+											<input
+												type="password"
+												class="form-control form-control-lg"
+												placeholder="confirm password"
+											/>
+										</div>
+										<input
+											type="submit"
+											value="Submit"
+											class="btn btn-outline-light btn-block"
+										/>
+									</form>
+								</div>
+							</div>
+						</div>
 					</div>
 				</div>
 			</div>
 		</header>
+		<!-- explore head -->
+		<section id="explore-head-section">
+			<div class="container">
+				<div class="row">
+					<div class="col text-center py-5">
+						<h1 class="display-4">Explore</h1>
+						<p class="lead">
+							Lorem ipsum dolor sit amet consectetur, adipisicing elit. Velit
+							vero ipsum, porro minima est ea minus beatae neque facilis
+							adipisci?
+            </p>
+            <a href="#" class="btn btn-outline-secondary">Find out more</a>
+					</div>
+				</div>
+			</div>
+    </section>
+    <!-- explore section  -->
+    <section id="explore-section" class="bg-light text-muted py-5">
+      <div class="container">
+        <div class="row">
+          <div class="col-md-6">
+            <img src="img/explore-section1.jpg" alt="" class="img-fluid mb-3 rounded-circle">
+          </div>
+          <div class="col-md-6"></div>
+        </div>
+      </div>
+    </section>
 
 		<script
 			src="http://code.jquery.com/jquery-3.3.1.min.js"
