--- a/LoopLab/index.html
+++ b/LoopLab/index.html
@@ -151,23 +151,56 @@
 							Lorem ipsum dolor sit amet consectetur, adipisicing elit. Velit
 							vero ipsum, porro minima est ea minus beatae neque facilis
 							adipisci?
-            </p>
-            <a href="#" class="btn btn-outline-secondary">Find out more</a>
+						</p>
+						<a href="#" class="btn btn-outline-secondary">Find out more</a>
 					</div>
 				</div>
 			</div>
-    </section>
-    <!-- explore section  -->
-    <section id="explore-section" class="bg-light text-muted py-5">
-      <div class="container">
-        <div class="row">
-          <div class="col-md-6">
-            <img src="img/explore-section1.jpg" alt="" class="img-fluid mb-3 rounded-circle">
-          </div>
-          <div class="col-md-6"></div>
-        </div>
-      </div>
-    </section>
+		</section>
+		<!-- explore section  -->
+		<section id="explore-section" class="bg-light text-muted py-5">
+			<div class="container">
+				<div class="row">
+					<div class="col-md-6">
+						<img
+							src="img/explore-section1.jpg"
+							alt=""
+							class="img-fluid mb-3 rounded-circle"
+						/>
+					</div>
+					<div class="col-md-6">
+						<h3>
+							Explore & connect
+						</h3>
+						<p>
+							Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nisi
+							adipisci recusandae voluptatum, libero unde iste explicabo at
+							nihil commodi deleniti!
+						</p>
+						<div class="d-flex">
+							<div class="p-4 align-self-start">
+								<i class="fas fa-check fa-2x"></i>
+							</div>
+							<div class="p-4 align-self-end">
+								Lorem ipsum dolor sit amet consectetur, adipisicing elit. Veniam
+								nostrum cum totam pariatur cupiditate assumenda fugit at
+								possimus excepturi tempora!
+							</div>
+            </div>
+            <div class="d-flex">
+							<div class="p-4 align-self-start">
+								<i class="fas fa-check fa-2x"></i>
+							</div>
+							<div class="p-4 align-self-end">
+								Lorem ipsum dolor sit amet consectetur, adipisicing elit. Veniam
+								nostrum cum totam pariatur cupiditate assumenda fugit at
+								possimus excepturi tempora!
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>
+		</section>
 
 		<script
 			src="http://code.jquery.com/jquery-3.3.1.min.js"
